responsive fixes for membership

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21839,6 +21839,19 @@ ul.bullet-style li h6 {
 .member-directory-result__results .member-directory-result__name {
   padding: 10px 20px;
 }
+.member-directory-result__label-mobile {
+  display: none;
+}
+.member-directory-result__label-mobile h4 {
+  font-size: 0.9em !important;
+  padding: 5px 0;
+  width: 100%;
+  padding-bottom: 5px;
+  display: inline-block;
+  border-bottom: 2px solid #ab1a2d;
+  margin-bottom: 5px;
+  text-transform: uppercase;
+}
 
 .pagination-section {
   display: inline-block;
@@ -22106,6 +22119,31 @@ ul.bullet-style li h6 {
   bottom: 0;
   left: 0;
   z-index: 1;
+}
+
+.dashboard-mobile {
+  display: none;
+  margin-top: 35px;
+}
+.dashboard-mobile .dropdown-menu.show {
+  display: block;
+  width: 100%;
+}
+.dashboard-mobile a {
+  color: #303132;
+}
+.dashboard-mobile .container {
+  max-width: 95%;
+}
+
+#dashboard-mobile-menu {
+  display: block;
+  width: 100%;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+#dashboard-mobile-menu i {
+  margin-left: 10px;
 }
 
 section.page {
@@ -24485,6 +24523,15 @@ _::-webkit-:not(:root:root),
     width: 100%;
   }
 }
+@media only screen and (max-width: 1190px) {
+  .memberdirectory-detail__image {
+    height: 200px;
+    width: 200px;
+    min-height: inherit;
+    margin: auto;
+    margin-bottom: 20px;
+  }
+}
 @media only screen and (max-width: 1100px) {
   section h2 {
     font-size: 2.7em;
@@ -24501,6 +24548,16 @@ _::-webkit-:not(:root:root),
     border-radius: 0;
     margin: 0;
     top: inherit;
+  }
+}
+@media only screen and (max-width: 1060px) {
+  .advance-tool i {
+    font-size: 1.7em;
+  }
+
+  .dashboard-navigation .navbar-bar__wrapper > li > a {
+    padding: 15px 25px;
+    font-size: 0.8em;
   }
 }
 @media only screen and (max-width: 1024px) {
@@ -24550,7 +24607,20 @@ _::-webkit-:not(:root:root),
     left: 10%;
   }
 }
+@media only screen and (max-width: 991px) {
+  .search-member-directory .form-group {
+    margin-bottom: 10px !important;
+  }
+}
 @media only screen and (max-width: 768px) {
+  .dashboard-nav {
+    display: none;
+  }
+
+  .dashboard-mobile {
+    display: block;
+  }
+
   .banner__image-slide--item {
     top: 0;
     height: 400px;
@@ -24629,10 +24699,76 @@ _::-webkit-:not(:root:root),
     height: auto !important;
     min-height: inherit;
   }
+
+  .member-directory-result__name {
+    display: block;
+    width: 100% !important;
+    max-width: 100%;
+    flex: 100%;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .member-directory-result__location {
+    display: block;
+    width: 100% !important;
+    max-width: 100%;
+    flex: 100%;
+    padding: 5px 15px;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .member-directory-result__language {
+    display: block;
+    width: 100% !important;
+    max-width: 100%;
+    flex: 100%;
+    padding: 5px 15px;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .member-directory-result__action {
+    display: block;
+    max-width: 100%;
+    width: 100%;
+    flex: 0 0 100%;
+    padding: 15px;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .member-directory-result__label-mobile {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    flex: 0 0 100%;
+  }
+
+  .member-directory-result__action a {
+    display: inline-block;
+    background: #ab1a2d !important;
+    padding: 15px;
+    font-size: 0.8em;
+    color: #fff;
+  }
+
+  .member-directory-result__item.member-directory-result__label {
+    display: none;
+  }
+
+  .member-directory-result__results {
+    border: 2px solid #ddd;
+  }
+
+  ul.inline-flex.inline-flex__extend {
+    margin-top: 25px;
+  }
 }
 @media only screen and (max-width: 600px) {
   section h2 {
     font-size: 2em;
+  }
+
+  .memberdirectory-detail {
+    padding: 10px;
   }
 }
 body.stop-scrolling {
