responsive fixes for membership repush

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24751,7 +24751,7 @@ _::-webkit-:not(:root:root),
   }
 
   .member-directory-result__item.member-directory-result__label {
-    display: none;
+    display: none !important;
   }
 
   .member-directory-result__results {
