--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -2365,7 +2365,7 @@ ul.bullet-style {
             width: 100%;
             padding-bottom: 5px;
             display: inline-block;
-            border-bottom: 2px solid $color-secondary;
+            border-bottom: 1px dotted $color-secondary;
             margin-bottom: 5px;
             text-transform: uppercase;
         }
