--- a/resources/assets/scss/components/_mobile-overwrite.scss
+++ b/resources/assets/scss/components/_mobile-overwrite.scss
@@ -361,6 +361,7 @@
         width: 100% !important;
         max-width: 100%;
         flex: 100%;
+        padding: 15px;
         border-bottom: 1px solid #ddd;
     }
     .member-directory-result__location {
@@ -368,7 +369,7 @@
         width: 100% !important;
         max-width: 100%;
         flex: 100%;
-        padding: 5px 15px;
+        padding: 15px;
         border-bottom: 1px solid #ddd;
     }
     .member-directory-result__language {
@@ -376,7 +377,7 @@
         width: 100% !important;
         max-width: 100%;
         flex: 100%;
-        padding: 5px 15px;
+        padding: 15px;
         border-bottom: 1px solid #ddd;
     }
     .member-directory-result__action {
@@ -386,6 +387,9 @@
         flex: 0 0 100%;
         padding: 15px;
         border-bottom: 1px solid #ddd;
+        .member-directory-result__label-mobile {
+            display: none !important;
+        }
     }
     .member-directory-result__label-mobile {
         display: block;
