responsive menu update

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19283,9 +19283,15 @@ header .contact-details-wrap .info a i.ic-chapter {
   align-items: center;
   justify-content: center;
 }
+.main-nagivation-mobile .login-option a {
+  color: #fff;
+}
 .main-nagivation-mobile .login-option i {
   font-size: 21px;
   color: #000;
+}
+.main-nagivation-mobile .login-option .dropdown-menu i {
+  color: #fff;
 }
 
 @media only screen and (max-width: 1024px) {
