--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18227,7 +18227,11 @@ header .main-nagivation-desktop .navbar-bar ul > li > a {
   font-size: 1em;
   font-weight: 500;
 }
-header .main-nagivation-desktop .navbar-bar ul > li.active a {
+header .main-nagivation-desktop .navbar-bar ul > li.active > a {
+  color: #ab1a2d !important;
+  font-weight: 600;
+}
+header .main-nagivation-desktop .navbar-bar ul > li.active > a:after {
   color: #ab1a2d !important;
 }
 header .main-nagivation-desktop .navbar-bar ul > li .dropdown-menu {
@@ -18242,6 +18246,9 @@ header .main-nagivation-desktop .navbar-bar ul > li .dropdown-menu ul li {
   padding: 0;
   margin: 0;
   width: 100%;
+}
+header .main-nagivation-desktop .navbar-bar ul > li .dropdown-menu ul li.active > a {
+  color: #ab1a2d !important;
 }
 header .main-nagivation-desktop .navbar-bar ul > li .dropdown-menu ul li a {
   background: #ab1a2d;
@@ -21348,10 +21355,13 @@ ul.bullet-style li h6 {
   height: 100%;
 }
 .media-thumbnail__title h3 {
-  font-size: 1em;
   font-weight: bold;
   padding: 18px 0;
   border-bottom: 1px solid #ddd;
+  font-size: 1.5em;
+  padding-left: 15px;
+  padding-right: 15px;
+  text-align: center;
 }
 .media-thumbnail__button h4 {
   font-size: 0.8em;
