--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21349,10 +21349,13 @@ ul.bullet-style li h6 {
 }
 .media-thumbnail__featured {
   height: 235px;
+  background: url("../images/media-placeholder.jpg");
+  background-size: cover;
+  background-position: center;
 }
 .media-thumbnail__featured iframe {
-  width: 100%;
-  height: 100%;
+  width: 100% !important;
+  height: 100% !important;
 }
 .media-thumbnail__title h3 {
   font-weight: bold;
