--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -1816,9 +1816,12 @@ ul.bullet-style {
     margin-bottom: 50px;
     &__featured {
         height: 235px;
+        background: url('../images/media-placeholder.jpg');
+        background-size: cover;
+        background-position: center;
         iframe {
-            width: 100%;
-            height: 100%;
+            width: 100% !important;
+            height: 100% !important;
         }
     }
     &__title {
