--- a/resources/assets/scss/pages/_pages-section.scss
+++ b/resources/assets/scss/pages/_pages-section.scss
@@ -216,6 +216,13 @@
             margin-bottom: 25px !important;
         }
     }
+    &--dashboard {
+        &--support {
+            section.contact-section {
+                margin-top: -15px;
+            }
+        }
+    }
 }
 
 .homepage {
