--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -1421,6 +1421,8 @@ ul.bullet-style {
             display: block;
             height: 100%;
             width: 100%;
+            background-size: auto 85% !important;
+            background-color: #fbf8f8 !important;
         }
     }
     &__details {
@@ -1501,8 +1503,11 @@ ul.bullet-style {
     padding-right: 15%;
     &__image {
         width: 100%;
-        height: 400px;
-        background-position: top center !important;
+        // height: 400px;
+        height: 450px;
+        // background-position: top center !important;
+        background-position: center !important;
+        background-size: 100% !important;
         img {
             width: 100%;
         }
