--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21216,6 +21216,12 @@ ul.bullet-style li h6 {
 .chapter-list-view__item .image-background a img {
   display: none;
 }
+.chapter-list-view__item a {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
 .chapter-list-view__image {
   min-height: 225px;
 }
@@ -22720,6 +22726,10 @@ section.page--media .search-member-directory {
   background-size: auto 90% !important;
   background-color: #f9f9f9;
   padding: 20px;
+}
+.page--sponsors section.sponsors.margin-m100 {
+  margin: 0;
+  background: #fff !important;
 }
 
 .homepage--main .sponsors {
