--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -1668,6 +1668,12 @@ ul.bullet-style {
                 }
             }
         }
+        a {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            display: block;
+        }
     }
     &__image {
         min-height: 225px;
