--- a/resources/assets/scss/components/_modals.scss
+++ b/resources/assets/scss/components/_modals.scss
@@ -40,11 +40,17 @@
     }
     &__gallery {
         @include flex;
+        flex-wrap: inherit;
         &--item {
             width: calc(100%/2);
             display: block;
-            height: 100px;
+            // height: 100px;
             cursor: pointer;
+            height: 120px;
+            min-height: inherit;
+            width: 120px;
+            background-size: cover !important;
+            background-position: center !important;
         }
     }
     &__big-image {
