--- a/resources/assets/scss/pages/_pages-section.scss
+++ b/resources/assets/scss/pages/_pages-section.scss
@@ -25,8 +25,8 @@
             padding-top: 40px;
         }
         .banner__thumb-slide {
-            width: 150px;
-            left: 20px;
+            width: 150px !important;
+            // left: 20px;
         }
     }
     .dashboard-nav {
