recompile the css for banner thumbnail hover

--- a/resources/assets/scss/components/_banner.scss
+++ b/resources/assets/scss/components/_banner.scss
@@ -276,6 +276,12 @@ $banner-background-color:#000;
                 }
             }
         }
+        .slick-slide.slick-active {
+            opacity: .7;
+        }
+        .slick-slide.lick-current.slick-active {
+            opacity: 1;
+        }
     }
     .target {
         display: block;
