--- a/resources/assets/scss/components/_banner.scss
+++ b/resources/assets/scss/components/_banner.scss
@@ -279,7 +279,7 @@ $banner-background-color:#000;
         .slick-slide.slick-active {
             opacity: .7;
         }
-        .slick-slide.lick-current.slick-active {
+        .slick-slide.slick-current.slick-active {
             opacity: 1;
         }
     }
