--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -2229,6 +2229,8 @@ ul.bullet-style {
     }
     .container-max {
         max-width: 100%;
+        position: relative;
+        z-index: 2;
     }
 }
 
