--- a/resources/assets/scss/components/_modals.scss
+++ b/resources/assets/scss/components/_modals.scss
@@ -41,8 +41,10 @@
     &__gallery {
         @include flex;
         flex-wrap: inherit;
+        height: 100vh;
+        overflow-y: scroll;
         &--item {
-            width: calc(100%/2);
+            width: calc(100%/2) !important;
             display: block;
             // height: 100px;
             cursor: pointer;
