--- a/resources/assets/scss/components/_chapter-elements.scss
+++ b/resources/assets/scss/components/_chapter-elements.scss
@@ -72,6 +72,13 @@
     &__left-push {
         .container-max {
             padding-left: 12%;
+            &.no-image-img {
+                padding: 0;
+                text-align: center;
+                ul.bullet-style {
+                    margin-top: 0;
+                }
+            }
         }
         .fullwidth__left {
             @include flex;
