--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -1404,6 +1404,7 @@ ul.bullet-style {
         margin-bottom: 45px;
         border-bottom: 1px solid #ddd;
         padding-bottom: 50px;
+        display: none !important;
         &:last-child {
             border-bottom: 0;
         }
