--- a/resources/assets/scss/components/_chapter-elements.scss
+++ b/resources/assets/scss/components/_chapter-elements.scss
@@ -542,6 +542,7 @@
         margin-bottom: 45px;
         border-bottom: 1px solid #ddd;
         padding-bottom: 50px;
+        display: none !important;
         &:last-child {
             border-bottom: 0;
         }
