--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -1400,14 +1400,17 @@ ul.bullet-style {
     margin-bottom: 50px;
     margin-top: 50px;
     &__item {
-        @include flex;
         margin-bottom: 45px;
         border-bottom: 1px solid #ddd;
         padding-bottom: 50px;
-        display: none !important;
+        display: none;
         &:last-child {
             border-bottom: 0;
         }
+    }
+    &__item-holder {
+        @include flex;
+        width: 100%;
     }
     &__date-range {
         flex: 0 0 8%;
