--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20992,13 +20992,16 @@ ul.bullet-style li h6 {
   flex: 0 0 40%;
   max-width: 40%;
   min-height: 300px;
+  position: relative;
+  background-size: cover;
 }
 .events-thumbnail__image a {
   display: block;
   height: 100%;
   width: 100%;
-  background-size: auto 85% !important;
-  background-color: #fbf8f8 !important;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 .events-thumbnail__details {
   flex: 0 0 52%;
