adjsut modal and added js for photo loadmore

--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -1898,6 +1898,9 @@ ul.bullet-style {
 
 .photo-section {
     margin: 50px 0;
+    &__item {
+        display: none;
+    }
 }
 
 .benefit-message {
