--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -111,7 +111,8 @@ section {
                 border: none;
                 position: absolute;
                 top: 100%;
-                left: 32%;
+                // left: 32%;
+                left: 30%;
                 cursor: pointer;
                 z-index: 9;
                 opacity: .4;
@@ -131,7 +132,8 @@ section {
                 border: none;
                 position: absolute;
                 top: 100%;
-                right: 54%;
+                // right: 54%;
+                right: 52%;
                 cursor: pointer;
                 z-index: 9;
                 opacity: .4;
